tests/errors/syntax/expected_r_paren/no_r_paren_in_call.c
// Expected ')'
void main() 
{
    printf("printme";
}
